// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiForm is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiForm testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiForm renders a form element 1`] = `
<form
  aria-label="aria-label"
  class="ouiForm testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiForm renders with error callout when isInvalid is "true" 1`] = `
<div
  aria-label="aria-label"
  class="ouiForm testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="ouiCallOut ouiCallOut--danger ouiForm__errors"
    role="alert"
    tabindex="-1"
  >
    <div
      class="ouiCallOutHeader"
    >
      <span
        class="ouiCallOutHeader__title"
      >
        Please address the highlighted errors.
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiForm renders with error callout when isInvalid is "true" and has multiple errors 1`] = `
<div
  aria-label="aria-label"
  class="ouiForm testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="ouiCallOut ouiCallOut--danger ouiForm__errors"
    role="alert"
    tabindex="-1"
  >
    <div
      class="ouiCallOutHeader"
    >
      <span
        class="ouiCallOutHeader__title"
      >
        Please address the highlighted errors.
      </span>
    </div>
    <div
      class="ouiText ouiText--small"
    >
      <div
        class="ouiTextColor ouiTextColor--default"
      >
        <ul>
          <li
            class="ouiForm__error"
          >
            <span>
              This is one error
            </span>
          </li>
          <li
            class="ouiForm__error"
          >
            <span>
              This is another error
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiForm renders with error callout when isInvalid is "true" and has one error 1`] = `
<div
  aria-label="aria-label"
  class="ouiForm testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="ouiCallOut ouiCallOut--danger ouiForm__errors"
    role="alert"
    tabindex="-1"
  >
    <div
      class="ouiCallOutHeader"
    >
      <span
        class="ouiCallOutHeader__title"
      >
        Please address the highlighted errors.
      </span>
    </div>
    <div
      class="ouiText ouiText--small"
    >
      <div
        class="ouiTextColor ouiTextColor--default"
      >
        <ul>
          <li
            class="ouiForm__error"
          >
            <span>
              This is one error
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiForm renders without error callout when invalidCallout is "none" 1`] = `
<div
  aria-label="aria-label"
  class="ouiForm testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
